Fix cropped avatar

--- a/css/index.styl
+++ b/css/index.styl
@@ -210,11 +210,11 @@ loadingSize = 30px
     left 14px
 
   .auth0-lock-header-avatar
-    height 80px
-    width 80px
+    height 70px
+    width 70px
     display block
     border-radius 100px
-    margin -16px auto 0
+    margin 5px auto 0
     position absolute
     left 0
     right 0
